# ProjectMX

./: .gitignore  .gitmodules  74181.v  README.md  fast_carry.v  flags.v  mxalu11u.v  mxalu_181.v  mxalu_rom.v  pyproject.toml  setup.py
11/: mx11_ins_fetch.sv  mx11su.sv  mx11su_tb.sv
11/alu/: 74181.v  alu_flags.v  fast_carry.v  flags.v  mxalu11u.v  mxalu11u_intel.v  mxalu_181.v  mxalu_rom.sv  mxalu_rom.v
11/alu/report/: mxalu11u.html
11/alu/tests/: tb_mxalu11u.py  test_mxalu11u.py  test_mxalu11u_intel.py
11/biu/: mxbiu.sv  mxbus_dev.sv  mxbus_test.sv
11/biu/tests/: tb_mxbiu_data.py  tb_mxbiu_ins.py  test_mxbiu_data.py  test_mxbiu_ins.py
11/lsu/: mxlsu.sv
11/registers/: data_mux.sv  mxregs11.sv  reg_tap.sv
11/roms/: alu_rom.sv  isa_rom.sv  mov_rom.v
11/seu/: mxseu.sv
11/seu/tests/: mxseu_dut.sv  tb_mxseu.py  test_mxseu.py
11/shifter/: mx11bshift.sv
MX11/: CACHE.c  CACHE.pyx  DEBUGIO.pyx  MX11.c  MX11.pyx  MX11SU_type1.pyx  MX11_ALU.c  MX11_ALU.pyx  MXALU11U.pyx  MXDEV.c  SRAM.pyx  TEST_ROM.c  TEST_ROM.pyx  alu-term.py  mx11u-type1-term.py  mxalu11u-term.py  mxterm.py  tape-term.py
isa_sim/: mx11u-type1-term.py  pyproject.toml
isa_sim/MX11/: MX11SU_type1.pyx  MXDEV.pyx  MXREGS.pyx  __init__.py  mx11.py  mxalu11u.py  mxregs.py  mxsru.py
