[tool.poetry]
name = "MX11"
version = "0.0.0"
description = "MX11 Experimental Strict 8-bit Organisation"
authors = ["Anubhav Mattoo <anubhavmattoo@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
