[tool.poetry]
name = "MX11"
version = "0.0.0"
description = "MX Experimental Computer Organisation"
authors = ["Anubhav Mattoo <anubhavmattoo@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.9"
setuptools = "^78.1.0"
cython = "^3.0.12"
prompt-toolkit = "^3.0.50"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
